name:                timer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/timer#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias Brandt
maintainer:          to_br@uni-bremen.de
copyright:           2017 Tobias Brandt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Timer
  build-depends:       base >= 4.7 && < 5
                     , reflex
                     , reflex-dom
                     , time
                     , text
                     , lens
  default-language:    Haskell2010

executable timer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , timer
                     , file-embed
  default-language:    Haskell2010

test-suite timer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/timer
